--- a/Content.Client/Info/RulesPopup.xaml
+++ b/Content.Client/Info/RulesPopup.xaml
@@ -1,4 +1,4 @@
-﻿<Control xmlns="https://spacestation14.io"
+<Control xmlns="https://spacestation14.io"
          xmlns:parallax="clr-namespace:Content.Client.Parallax"
          xmlns:info="clr-namespace:Content.Client.Info"
          VerticalExpand="True" HorizontalExpand="True"
@@ -13,6 +13,8 @@
                 <info:RulesControl />
                 <Label Name="WaitLabel" />
                 <BoxContainer Orientation="Horizontal">
+                    <Button Name ="ToWikiSend"
+                            Text="{Loc 'ui-rules-wikirules'}" />
                     <Button Name="AcceptButton"
                             Text="{Loc 'ui-rules-accept'}"
                             Disabled="True" />
